--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
 @import "./tailwind.scss";
 @import "./inputs/removeInputHistory";
 @import "./spinner/loading-spinner";
+@import "./label/hidden-label";
